cabal-version:      3.0
name:               window-switcher
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable window-switcher
    ghc-options:      -threaded
    import:           warnings
    main-is:          Main.hs
    other-modules:    Windows
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , brick
                    , vector
                    , vty
                    , mtl
                    , microlens-mtl
                    , microlens
                    , base
                    , streamly-core
                    , streamly-process
                    , directory
                    , filepath
    hs-source-dirs:   app
    default-language: Haskell2010
